# CS236Project2---Preston

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomata.cpp  IdAutomata.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiLineCommentAutomaton.cpp  MultiLineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.cpp  QuestionMarkAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  (+7 more)
Lab1PassOffCases/1-70/: input3.txt
